<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.smarthome.device.ManualActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_size"
        android:background="@color/status_bar" >

        <TextView
            android:id="@+id/smart_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/manual_add_device"
            android:textSize="@dimen/text_size_24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="@dimen/text_size_18sp"/>

        <EditText
            android:id="@+id/deviceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/device_tips"
            android:textSize="@dimen/text_size_18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/manual_add_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add_device"/>

</LinearLayout>
