<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wifi_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_size"
        android:background="@color/status_bar" >

        <TextView
            android:id="@+id/smart_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/add_device_way"
            android:textSize="@dimen/text_size_24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginLeft ="@dimen/size_15dp"
        android:layout_marginRight ="@dimen/size_15dp"
        android:layout_marginTop="@dimen/margin_size_20"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/wifi_ssid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_ssid"
            android:textSize="@dimen/size_20dp" />

        <TextView
            android:id="@+id/tv_wifi_sssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:textSize="@dimen/size_20dp"
            android:ems="10"
            android:singleLine="true" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginLeft ="@dimen/size_15dp"
        android:layout_marginRight ="@dimen/size_15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_password"
            android:textSize="@dimen/size_20dp" />

        <EditText
            android:id="@+id/wifi_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text=""
            tools:ignore="TextFields" >
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft ="@dimen/size_15dp"
        android:layout_marginRight ="@dimen/size_15dp"
        android:layout_marginTop="@dimen/size_50dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start_confirm"
            android:text="@string/start"
            android:layout_width ="fill_parent"
            android:layout_height ="@dimen/size_50dp"
            android:gravity ="center"
            android:textSize ="@dimen/size_20dp"  />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft ="15.0dip"
        android:layout_marginRight ="15.0dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switchIsSsidHidden"
            android:alpha="0.0"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft ="15.0dip"
        android:layout_marginRight ="15.0dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerTaskResultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.0"
            android:enabled="false"
            />
    </LinearLayout>


</LinearLayout>
